Details mode: Fix wrong required column-width calculation

BUG: 298577
FIXED-IN: 4.9.0